--- a/style.css
+++ b/style.css
@@ -75,9 +75,39 @@
     outline: none;
 }
 
+
+#profileMenu{
+    position: absolute;
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+}
+
+#profileMenu.show{
+    display: flex;
+}
+
+.pMenuItem{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+
+img.logo-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
 img.admin-image {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 
@@ -94,7 +124,8 @@ img.admin-image {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: -1;
+    overflow: auto;
     background-color: #fff;
     display: none;
     transition: transform 0.3s ease;
@@ -110,14 +141,38 @@ img.admin-image {
 .logo {
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 10px;
     height: 70px;
     width: 100%;
-    background-color: #010101;
+    background-color: #454545;
 }
 
 .navbar-brand {
     font-size: 25px;
     font-weight: 600;
     color: #f6f6f6;
+}
+
+.navbar-brand:hover{
+    color: #f6f6f6;
+}
+
+
+.side-links{
+    width: 100%;
+    background-color: #fff;
+}
+
+.smenu-title{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.slink-menu{
+    list-style: none;
+    padding: 0;
+}
+
+.slink-menu-item{
+    width: 100%;
 }
