--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     position: fixed;
+    z-index: 20;
 }
 
 .left {
@@ -111,20 +112,13 @@ img.admin-image {
     border-radius: 50%;
 }
 
-
-.main-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
 #sideMenu {
     width: 20%;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 10;
     overflow: auto;
     background-color: #fff;
     display: none;
@@ -191,13 +185,120 @@ img.admin-image {
     padding: 0;
 }
 
-.content-container{
-    padding-top: 100px;
-    z-index: -2;
+.main-content{
+    padding: 100px 30px;
 }
 
-.container-header{
+.content-header{
+    width: 100%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.header-title{
+    margin: 0;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.cumber-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    list-style: none;
+}
+
+.cumber-item{
+    padding: 0 10px;
+}
+
+.content-body{
+    width: 100%;
+}
+
+.nav-buttons{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tab-buttons{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.useful-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    list-style: none;   
+}
+
+.useful-button-items{
+    padding: 0 10px;
+}
+
+.filter-items{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.filter-input{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.filter{
+    width: 80px;
+}
+
+.task-list{
+    padding: 20px 0;
+}
+
+.next-page{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.page-text{
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.footer{
+    width: 100%;
+    height: 70px;
+    background-color: #454545;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.copyright{
+    margin: 0;
+    color: #f6f6f6;
+    font-weight: 500;
+}
+.version{
+    margin: 0;
+    color: #f6f6f6;
+    font-weight: 500;
 }
