--- a/style.css
+++ b/style.css
@@ -282,6 +282,27 @@ img.admin-image {
     margin: 0;
 }
 
+.supplier-form{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.left-form{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.right-form{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
 .footer{
     width: 100%;
     height: 70px;
