--- a/style.css
+++ b/style.css
@@ -315,10 +315,10 @@ img.admin-image {
     width: 20%;
 }
 
-.second-row{
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.editor{
+    border: none;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .right-form{
