--- a/style.css
+++ b/style.css
@@ -328,6 +328,25 @@ img.admin-image {
     gap: 10px;
 }
 
+#imageUploader{
+    height: 250px;
+    border: 2px dashed #454545;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.bi-images{
+    font-size: 50px;
+}
+
+
+.bi-folder{
+    font-size: 50px;
+}
 
 .footer{
     width: 100%;
